fix layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,10 +172,12 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+}
+
+.index-page-content {
     vertical-align: middle;
     height: 100%;
     .wrapper {
-        vertical-align: middle;
         position: absolute;
         top: 50%;
         left: 50%;
